-----------------
- Implemented for Textobjects: Resize object to fit contents
  (How is this called in real english? :-)
- Started implementing "Copy page" - doesn't do anything yet...

Reggie, 5.6.1999:
-----------------
- KRect/KPoint/KSize -> QRect/QPoint/QSize
- Some source cleanups
- More work on copying pages

Reggie, 6.6.1999:
-----------------
- It's now possible to choose for screenpresentations, if
  - all slides should be shown
  - only the current slide should be shown (that's the slide/page which is the current one in edit mode
    at the moment)
  - selected ones should be shown (you can select them in a listview)
  All this configuration can be done in the page-config dialog (menu Screenpresentations).
  The second point (only current slide) is also convinient, when you are just creating/editing
  a presentation to view only the slide on which you currently are working for testing :-)

Reggie, 11.6.1999:
------------------
- Fixed saving pixmap collection (pixmaps which are
  only in the undo-buffer but not really used anymore
  are not saved)

Reggie, 12.6.1999:
------------------
- Implemented resizing objects with keeping constraints
  (when pressing Control while resizing)
- Fixes

Reggie, 15.6.1999:
------------------
- Pixmaps are now (if possible) saved in native format
  and not always in BMP => redruces file size if you
  use compressed image formats and keeps transparency
  e.g. for XPMs.

Reggie, 17.6.1999:
------------------
- tell dialogs about their parent, so that the window manager
  can do some optimations
- Tell QPopupMenus about their parent to avoid memory leaks
- Cleanups
- Fixes in dialog layouts


Reggie, 22.6.1999:
------------------
- Activating/Deactivating embedded parts works now
  (no crashes anymore :-)

Reggie, 23.6.1999:
------------------
- Don't flicker when resizing the page
- Optimized drawing background - produces much smaller PS output now
 
Reggie, 29.6.1999:
------------------
- Removed focus hacks