@@ -35,7 +35,7 @@
 // types
 enum BackType { BT_COLOR = 0, BT_PICTURE = 1, BT_CLIPART = 2 };
 enum BackView { BV_ZOOM = 0, BV_CENTER = 1, BV_TILED = 2 };
-enum BCType { BCT_PLAIN = 0, BCT_GHORZ = 1, BCT_GVERT = 2, BCT_GDIAGONAL1 = 3, BCT_GDIAGONAL2 = 4, BCT_GCIRCLE = 5, BCT_GRECT = 6 };
+enum BCType { BCT_PLAIN = 0, BCT_GHORZ = 1, BCT_GVERT = 2, BCT_GDIAGONAL1 = 3, BCT_GDIAGONAL2 = 4, BCT_GCIRCLE = 5, BCT_GRECT = 6, BCT_GPIPECROSS = 7, BCT_GPYRAMID = 8 };
 enum ObjType { OT_PICTURE = 0, OT_LINE = 1, OT_RECT = 2, OT_ELLIPSE = 3, OT_TEXT = 4, OT_AUTOFORM = 5, OT_CLIPART = 6, OT_UNDEFINED = 7, OT_PIE = 8, \
                OT_PART };
 enum LineType { LT_HORZ, LT_VERT, LT_LU_RD, LT_LD_RU };
